fixed header height alignment issues

--- a/mysite/assets/scss/variables/_base.scss
+++ b/mysite/assets/scss/variables/_base.scss
@@ -6,6 +6,7 @@ $thick-border-width: 4px;
 
 $mobile-header-height: 70px;
 $desktop-header-height: 78px;
+$expanded-header-height: 155px;
 
 $mobile-padding: 10px;
 $mobile-menu-item-padding: 20px;
